[package]
name = "pis"
version = "0.1.0"
edition = "2021"
authors = ["Vivek Naik <vivek.adishankara@gmail.com>"]
description = "A molecular dynamics simulator in Rust"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
nalgebra = "0.34.0"
rand = "0.9.2"
rand_distr = "0.5.1"
