[package]
name = "pis"
version = "0.1.0"
edition = "2021"
authors = ["Vivek Naik <vivek.adishankara@gmail.com>"]
description = "A molecular dynamics simulator in Rust"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
nalgebra = "0.34.1"
parking_lot = "0.12.4"
rand = "0.10.0"
rand_distr = "0.6.0"
rayon = "1.11.0"
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.26.0"
rstest = "0.26.1"